--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  background-color:white;
   font-size: 18px;
 }
 body, a:link, a:visited, a:active{
@@ -21,7 +21,35 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
+  max-height: 100px;
+  max-width: 100px;
+  position:absolute;
+}
+
+#blinkyDancer{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+}
+
+#pugDancer{
+  position:absolute;
+}
+img.animated-gif{
+  width: 120px;
+  height: auto;
+}
+
+#superHeroDancer{
+  position:absolute;
+}
+
+#myVideo {
+  position: fixed;
+  top: 30px;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 70%;
+  /* max-height: 80%; */
 }
